capi/src/capi.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub const __bool_true_false_are_defined: u32 = 1;
pub const true_: u32 = 1;
pub const false_: u32 = 0;
pub type ObjToStringFunc = ::std::option::Option<
    unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void) -> *const ::std::os::raw::c_char,
>;
pub type ObjFunc = ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PluginVtable {
    pub name: ObjToStringFunc,
    pub version: ObjToStringFunc,
    pub register_events: ObjFunc,
    pub substribe_events: ObjFunc,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of PluginVtable"][::std::mem::size_of::<PluginVtable>() - 32usize];
    ["Alignment of PluginVtable"][::std::mem::align_of::<PluginVtable>() - 8usize];
    ["Offset of field: PluginVtable::name"][::std::mem::offset_of!(PluginVtable, name) - 0usize];
    ["Offset of field: PluginVtable::version"]
        [::std::mem::offset_of!(PluginVtable, version) - 8usize];
    ["Offset of field: PluginVtable::register_events"]
        [::std::mem::offset_of!(PluginVtable, register_events) - 16usize];
    ["Offset of field: PluginVtable::substribe_events"]
        [::std::mem::offset_of!(PluginVtable, substribe_events) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CPlugin {
    pub vtable: PluginVtable,
    pub object: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CPlugin"][::std::mem::size_of::<CPlugin>() - 40usize];
    ["Alignment of CPlugin"][::std::mem::align_of::<CPlugin>() - 8usize];
    ["Offset of field: CPlugin::vtable"][::std::mem::offset_of!(CPlugin, vtable) - 0usize];
    ["Offset of field: CPlugin::object"][::std::mem::offset_of!(CPlugin, object) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CEvents {
    pub inner: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CEvents"][::std::mem::size_of::<CEvents>() - 8usize];
    ["Alignment of CEvents"][::std::mem::align_of::<CEvents>() - 8usize];
    ["Offset of field: CEvents::inner"][::std::mem::offset_of!(CEvents, inner) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CInitData {
    pub events: CEvents,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CInitData"][::std::mem::size_of::<CInitData>() - 8usize];
    ["Alignment of CInitData"][::std::mem::align_of::<CInitData>() - 8usize];
    ["Offset of field: CInitData::events"][::std::mem::offset_of!(CInitData, events) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CEvent {
    pub event: *const ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CEvent"][::std::mem::size_of::<CEvent>() - 8usize];
    ["Alignment of CEvent"][::std::mem::align_of::<CEvent>() - 8usize];
    ["Offset of field: CEvent::event"][::std::mem::offset_of!(CEvent, event) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CEventMut {
    pub event: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of CEventMut"][::std::mem::size_of::<CEventMut>() - 8usize];
    ["Alignment of CEventMut"][::std::mem::align_of::<CEventMut>() - 8usize];
    ["Offset of field: CEventMut::event"][::std::mem::offset_of!(CEventMut, event) - 0usize];
};
unsafe extern "C" {
    pub fn deallocate_event_data(arg1: *mut ::std::os::raw::c_void);
}
